...
                    }
                    .onDelete(perform: deletePerson)
                }
                .listStyle(.insetGrouped)
            }
        }
        .navigationTitle("Members")
        .navigationDestination(for: Person.self) { person in
            PersonDetailView(person: person)
        }
        .toolbar {
            ToolbarItem(placement: .primaryAction) {
                Button(
...
